--- a/index.css
+++ b/index.css
@@ -1,16 +1,18 @@
 /** @format */
 
 body {
-  background-color: #ecf0f1;
+  background-color: #2c3e50;
 }
 
-h1 {
+.btn {
+  cursor: pointer;
+}
+body {
   color: #34495e;
-  transition: color 0.5s ease-in-out;
 }
 
 .clicked {
-  color: #6f8c8d;
+  color: #7f8c8d;
 }
 
 .form,
@@ -20,4 +22,23 @@ h1 {
 
 .showing {
   display: block;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
 }
